@@ -1,3 +1,7 @@
+FBINTF Change Log  version                                      (1.0-1) Tue, 06 Dec 2016 10:33:47 +0000
+
+1. Limit maximum Blob segment read/write to MaxuShort
+
 FBINTF Change Log  version                                      (1.0-0) Tue, 06 Dec 2016 10:33:47 +0000
 
 1. Initial Release
